syntax = "proto3";

package common;

option go_package = "build/order";
import "protos/global/global.proto";

message Pay {
  // 删除状态
  bool delStatus = 1;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 2;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 3;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 4;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 5;  // @gotags: gorm:"->" swaggerignore:"true"
}

// SetPayPwdParam 设置支付密码参数
message SetPayPwdParam {
  // 验证码
  string verifyCode = 1;  // @gotags: validate:"required"
  // 密码
  string payPwd = 2;  // @gotags: validate:"required"
  // 收i手机号
  string phone = 3;  // @gotags: validate:"required"
}

message PayIds {
  repeated string id = 1;
  string userId = 2;
}

// 分页查询加权参数
message PayPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询参数
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 返回结果
message PayResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  Pay detail = 3;  // 详情
  repeated Pay list = 4;  // 列表
}

// 业务实现
service PayService {
  // 新增
  rpc Create(Pay) returns (PayResponse);

  // 修改
  rpc Update(Pay) returns (PayResponse);

  // 删除
  rpc Delete(PayIds) returns (PayResponse);

  // 查询 详情
  rpc FindById(PayIds) returns (PayResponse);

  // 查询 分页
  rpc FindPageList(PayPageAuthQuery) returns (PayResponse);
}
